Second round of code cleanup :construction: