@@ -21,7 +21,7 @@ import android.widget.TextView;
 import com.mozilla.hackathon.kiboko.R;
 import com.mozilla.hackathon.kiboko.models.Question;
 import com.mozilla.hackathon.kiboko.provider.DsoContract;
-import com.mozilla.hackathon.kiboko.utilities.Utils;
+import com.mozilla.hackathon.kiboko.utils.Utils;
 import com.mozilla.hackathon.kiboko.widgets.CheckableLinearLayout;
 import com.mozilla.hackathon.kiboko.widgets.DSORadioGroup;
 
@@ -29,10 +29,11 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import static com.mozilla.hackathon.kiboko.utilities.LogUtils.makeLogTag;
+import static com.mozilla.hackathon.kiboko.utils.LogUtils.makeLogTag;
 
 public class IconQuizActivity extends AppCompatActivity implements LoaderManager.LoaderCallbacks<Cursor> {
     private static final List<Integer> possibleIcons;
+
     static {
         List<Integer> icons = new ArrayList<Integer>();
 
@@ -89,26 +90,25 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
         choiceOptions = new CheckableLinearLayout[4];
         imageOptions = new ImageView[4];
 
-        choiceOptions[0] = (CheckableLinearLayout)findViewById(R.id.optionA);
-        choiceOptions[1] = (CheckableLinearLayout)findViewById(R.id.optionB);
-        choiceOptions[2] = (CheckableLinearLayout)findViewById(R.id.optionC);
-        choiceOptions[3] = (CheckableLinearLayout)findViewById(R.id.optionD);
+        choiceOptions[0] = (CheckableLinearLayout) findViewById(R.id.optionA);
+        choiceOptions[1] = (CheckableLinearLayout) findViewById(R.id.optionB);
+        choiceOptions[2] = (CheckableLinearLayout) findViewById(R.id.optionC);
+        choiceOptions[3] = (CheckableLinearLayout) findViewById(R.id.optionD);
 
-        imageOptions[0]  = (ImageView)findViewById(R.id.answera);
-        imageOptions[1]  = (ImageView)findViewById(R.id.answerb);
-        imageOptions[2]  = (ImageView)findViewById(R.id.answerc);
-        imageOptions[3]  = (ImageView)findViewById(R.id.answerd);
+        imageOptions[0] = (ImageView) findViewById(R.id.answera);
+        imageOptions[1] = (ImageView) findViewById(R.id.answerb);
+        imageOptions[2] = (ImageView) findViewById(R.id.answerc);
+        imageOptions[3] = (ImageView) findViewById(R.id.answerd);
 
-        quizStepView  = (TextView) findViewById(R.id.quizStepView);
+        quizStepView = (TextView) findViewById(R.id.quizStepView);
         quizStepScore = (TextView) findViewById(R.id.quizStepScore);
 
-        quizGroup = (DSORadioGroup)findViewById(R.id.quizGroup);
+        quizGroup = (DSORadioGroup) findViewById(R.id.quizGroup);
 
-        quizGroup.setOnCheckedChangeListener(new DSORadioGroup.OnCheckedChangeListener()
-        {
+        quizGroup.setOnCheckedChangeListener(new DSORadioGroup.OnCheckedChangeListener() {
             @Override
             public void onCheckedChanged(DSORadioGroup group, @IdRes int checkedId) {
-                if(checkedId != -1){
+                if (checkedId != -1) {
                     CheckableLinearLayout checkedView = (CheckableLinearLayout) findViewById(checkedId);
                     checkAnswer(checkedView);
                     quizStepScore.setText(getString(R.string.quiz_template_score, score, quizList.size()));
@@ -141,7 +141,7 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
     /**
      * Show exit confirm dialog
      */
-    public void showExitConfirmDialog(){ // just show an dialog
+    public void showExitConfirmDialog() { // just show an dialog
         AlertDialog.Builder dialog = new AlertDialog.Builder(this);
         dialog.setTitle("Exit Quiz?"); // set title
         dialog.setMessage("Are you sure you want to exit the Quiz page?"); // set message
@@ -164,25 +164,25 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
 
     /**
      * Check whether icon answer is correct {@link CheckableLinearLayout}
+     *
      * @param checkedView selected view
      * @return true/false
      */
-    public boolean checkAnswer(CheckableLinearLayout checkedView){
+    public boolean checkAnswer(CheckableLinearLayout checkedView) {
 
         boolean correct = false;
 
-        if(currentQuestion.getANSWER().equals(checkedView.getTag()))
-        {
+        if (currentQuestion.getANSWER().equals(checkedView.getTag())) {
             score++;
             correct = true;
-        }else {
+        } else {
             correct = false;
         }
 
-        if(question_id < quizList.size()){
+        if (question_id < quizList.size()) {
             currentQuestion = quizList.get(question_id);
             setQuestionView(currentQuestion);
-        }else{
+        } else {
             Intent intent = new Intent(IconQuizActivity.this, ResultActivity.class);
             Bundle scoreBundle = new Bundle();
             scoreBundle.putInt("score", score);
@@ -200,7 +200,7 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
         int choiceResId = -1;
 
         while (true) {
-            choiceResId = possibleIcons.get(new Double(Math.floor(Math.random() * possibleIcons.size())).intValue());
+            choiceResId = possibleIcons.get(Double.valueOf(Math.floor(Math.random() * possibleIcons.size())).intValue());
             if (choiceResId != otherChoices[0] && choiceResId != otherChoices[1]
                     && choiceResId != otherChoices[2] && choiceResId != otherChoices[3]) {
                 return choiceResId;
@@ -211,12 +211,11 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
     /**
      * Populate quiz question view {@link Question}
      */
-    private void setQuestionView(Question question)
-    {
+    private void setQuestionView(Question question) {
         quizStepView.setText(question.getQUESTION());
         choiceOptions[0].setTag(question.getOPTIONA());
 
-        int answerIndex = new Double(Math.floor(Math.random()*4)).intValue();
+        int answerIndex = Double.valueOf(Math.floor(Math.random() * 4)).intValue();
         int answerResId = Utils.getResId(this, question.getANSWER());
 
         choiceOptions[answerIndex].setTag(question.getANSWER());
@@ -240,7 +239,7 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
     @Override
     public Loader<Cursor> onCreateLoader(int id, Bundle args) {
         // Define the columns to retrieve
-        String[] projectionFields = new String[] {
+        String[] projectionFields = new String[]{
                 DsoContract.Quizes.KEY_ID,
                 DsoContract.Quizes.KEY_QUESTION,
                 DsoContract.Quizes.KEY_ANSWER,
@@ -270,11 +269,11 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
             }
         }
         // Check whether we have any questions and setup the view.
-        if(quizList.size() > 0){
+        if (quizList.size() > 0) {
             List<Question> randomizedQuizList = new ArrayList<Question>();
 
             while (quizList.size() > 0) {
-                int randomIndex = (new Double(Math.random()*quizList.size()).intValue());
+                int randomIndex = (Double.valueOf(Math.random() * quizList.size()).intValue());
                 randomizedQuizList.add(quizList.get(randomIndex));
                 quizList.remove(randomIndex);
             }
@@ -290,6 +289,7 @@ public class IconQuizActivity extends AppCompatActivity implements LoaderManager
 
     /**
      * Populate quiz {@link Question} with data from {@link Cursor}.
+     *
      * @param cursor
      * @return
      */
